<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_content_description" />

    <!-- Delete Button -->
    <ImageButton
        android:id="@+id/imageDeleteButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete_image"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp" />

    <!-- Share Button -->
    <ImageButton
        android:id="@+id/imageShareButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_share"
        android:contentDescription="@string/share_image"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/imageDeleteButton"
        android:layout_margin="16dp" />
</RelativeLayout>
